cleanup imports, add theme service, add toggle button, add light-dark mode toggle functionality and persisting localstorage

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -6,5 +6,10 @@
     <div>humidity: {{weather.humidity}}%</div>
     <div>pressure: {{weather.pressure}}hpa</div>
 </div>
-<input type="text" placeholder="Enter location..." [(ngModel)]="location">
-<button (click)="getWeather()">Test</button>
+<div>
+    <input type="text" placeholder="Enter location..." [(ngModel)]="location">
+    <button (click)="getWeather()">Test</button>
+</div>
+<div>
+    <mat-slide-toggle [(ngModel)]="isDarkMode" (click)="toggleDarkMode()"></mat-slide-toggle>
+</div>
