cleanup project fix css add error message

--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,14 +1,20 @@
-<div class="weatherRow" style="font-size: 30px; margin-top: 46px;"><img
-        src="../../assets/img/location-{{mode}}.svg">{{location}}</div>
-<div class="weatherRow" style="font-size: 18px; margin-top: 11px;">{{date}}</div>
+<div class="weatherRow" id="locRow"><img class="weatherIco" id="locIco"
+        src="../../assets/img/location-{{mode}}.svg">{{location}}
+</div>
+<div class="weatherRow" id="weatherDate">{{date}}</div>
 <div *ngIf="weather">
     <div class="weatherRow" id="weatherImgContainer">
         <img class="weatherImg" src="../../assets/img/{{weather.icon}}-{{mode}}.svg">
     </div>
-    <div class="weatherRow" style="font-size: 60px; margin-bottom: -10px;">{{weather.temp}}°C</div>
+    <div *ngIf="weather.temp" class="weatherRow" id="weatherTemp">{{weather.temp}}°C</div>
+    <div *ngIf="weather.error">
+        <div class="weatherRow" id="errorTop">Oops, something went
+            wrong!</div>
+        <div class="weatherRow" id="description" id="errorBot">(Perhaps you misspelled your location?)</div>
+    </div>
     <div class="weatherRow" id="description">{{weather.desc | titlecase}}</div>
 </div>
-<form class="weatherRow weatherForm" autocomplete="off" style="margin-top: 17px;">
+<form class="weatherRow weatherForm" autocomplete="off" id="weatherForm">
     <input type="text" id="weatherInput" #weatherLoc placeholder="Enter location..."
         (keyup.enter)="getWeather(weatherLoc.value)" limit="20">
     <button class="weatherButton" (click)="getWeather(weatherLoc.value)"><img src="../../assets/img/nearme-{{mode}}.svg"
@@ -16,14 +22,16 @@
 </form>
 
 <div *ngIf="weather" class="detailsContainer">
-    <div class="detailsRow"><img class="weatherIco" src="../../assets/img/air-{{mode}}.svg">
-        <div class="weatherDetail" style="font-size: 20px;">{{weather.windSpeed}} km/h {{directionTxt}}</div>
-    </div>
-    <div class="detailsRow"><img class="weatherIco" src="../../assets/img/water-{{mode}}.svg">
-        <div class="weatherDetail" style="font-size: 20px;">{{weather.humidity}}%</div>
-    </div>
-    <div class="detailsRow"><img class="weatherIco" src="../../assets/img/meter-{{mode}}.svg">
-        <div class="weatherDetail" style="font-size: 20px;">{{weather.pressure}}hpa</div>
+    <div *ngIf="!weather.error">
+        <div class="detailsRow"><img class="weatherIco" src="../../assets/img/air-{{mode}}.svg">
+            <div class="weatherDetail">{{weather.windSpeed}} km/h {{directionTxt}}</div>
+        </div>
+        <div class="detailsRow"><img class="weatherIco" src="../../assets/img/water-{{mode}}.svg">
+            <div class="weatherDetail">{{weather.humidity}}%</div>
+        </div>
+        <div class="detailsRow"><img class="weatherIco" src="../../assets/img/meter-{{mode}}.svg">
+            <div class="weatherDetail">{{weather.pressure}}hpa</div>
+        </div>
     </div>
 </div>
 
